// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Symbol /> from .bob file use arrayIndex to find index if value is an array 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 3.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file use fallbackSymbol if index out of range or no symbol provided 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="https://cs-web-symbol.diamond.ac.uk/catalogue/default.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .bob file use initialIndex if no props value provided 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 3.svg"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
  <div
    style="justify-content: center; align-content: center;"
  >
    <span
      class="IndexLabel"
    >
      <b>
        2
      </b>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Symbol /> from .opi file matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="overflow: hidden; text-align: left; width: 100%; height: 100%;"
  >
    <img
      src="img 1.gif"
      style="width: 100%; height: 100%; display: block; transform: rotate(0deg) scaleX(1) scaleY(1); object-fit: fill;"
    />
  </div>
  <div
    class="SymbolLabel"
    style="background-color: transparent; align-items: center; justify-content: center;"
  >
    <div
      style="padding: 5%;"
    >
      <div
        class="Label _Label_c35983"
        style="background-color: transparent; cursor: default; justify-content: flex-start; align-items: flex-start;"
      >
        <span>
           Fake value 
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
